[package]
name = "nekoguard"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
hyper-tls = "0.6"
http-body-util = "0.1"
bytes = "1"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8.5.0"

[build-dependencies]
minify-html = "0.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
